fix z-index value causing the Header component to be sent to the back

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -10,7 +10,7 @@
     left: 0;
     width: 100%;
     height: $header-height;
-    z-index: 1;
+    z-index: 5;
     background-color: $black;
 
     &--visible-nav {
